<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pocket monsters</string>
    <string name="main_menu">Main Menu</string>
    <string name="map">Map</string>
    <string name="index">Index</string>
    <string name="deck">Monster Deck</string>
    <string name="notifications">Notifications</string>
    <string name="items">Items</string>
    <string name="menu_map">map image for main menu</string>
    <string name="drop">Drop</string>
    <string name="drop_desc">Drop Button</string>
    <string name="use">Use</string>
    <string name="use_desc">Use Button</string>
    <string name="login_header">login</string>
    <string name="login_btn">Login</string>
    <string name="run">run</string>
    <string name="lock">Lock</string>
    <string name="activate">Activate</string>
    <string name="location">Location</string>
    <string name="order">Order</string>
    <string name="gameplay">Game</string>
    <string name="gameplay_widget">Gameplay Widget</string>
    <string name="stats">Stats</string>
    <string name="description">Description</string>
    <string name="info_image">Image</string>
    <string name="fight">Fight</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
