<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black_overlay"
	android:orientation="horizontal"
		android:padding="10dp">
   
    <TextView
        android:id="@+id/monster_name"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_weight=".5"
     	android:textColor="#33b5e5"
     	android:textSize="20sp"
     	android:textStyle="italic"/>
    <Button
        android:id="@+id/monster_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:background="@drawable/button" 
        android:text="@string/location"
        android:padding="10dp"/>
    <Button
        android:id="@+id/monster_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:background="@drawable/button" 
        android:text="@string/activate"
        android:padding="10dp"/>
    <Button
        android:id="@+id/monster_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="@drawable/button"
        android:text="@string/order"
        android:padding="10dp"/>
 </LinearLayout>