<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black_overlay"
	android:orientation="horizontal"
	android:padding="10dp">
   
    <TextView
        android:id="@+id/encounter_name"
     	android:layout_width="0dp"
     	android:layout_height="wrap_content"
     	android:layout_weight=".60"
     	android:textColor="#33b5e5"
     	android:textSize="20sp"
     	android:textStyle="italic"/>
    <Button
        android:id="@+id/encounter_fight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_margin="1dp"
        android:background="@drawable/button_clicks" 
        android:text="@string/fight"
        android:padding="10dp"/>
    <Button
        android:id="@+id/encounter_lock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_margin="1dp"
        android:background="@drawable/button_clicks" 
        android:text="@string/lock"
        android:padding="10dp"/>
    <Button
        android:id="@+id/encounter_run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:layout_margin="1dp"
        android:background="@drawable/button_clicks"
        android:text="@string/run"
        android:padding="10dp"/>
    
 </LinearLayout>